--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,7 +1,50 @@
 .center {
-  height: 100vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  // This pushes the entire centered block up by 10% of the viewport height
+  margin-bottom: 10vh;
+  box-sizing: border-box; // Ensures padding doesn't add to the height
+}
+
+img {
+  transition: width 0.2s ease-in-out; // Adds a smooth resize effect
+}
+
+.buttons {
+  display: flex;
+  gap: 10vw; 
+  margin-top: 5vh; 
+  width: 100%;
+  justify-content: center;
+  padding: 0 20px; 
+  box-sizing: border-box;
+}
+
+.buttons button {
+  width: 300px; 
+  padding: 10px 0; 
+  font-size: 1.5rem; 
+  border-width: 2px; 
+  border-radius: 3%;
+  border-color: black;
+}
+
+@media (max-width: 768px) {
+  img {
+    width: 70%; // Reduces the logo's width on smaller screens
+  }
+  
+  .buttons {
+    flex-direction: column; 
+    align-items: center; 
+    gap: 50px; 
+  }
+
+  .buttons button {
+    width: 80%; 
+    max-width: 300px;
+  }
 }
