--- a/front/src/app/pages/home/home.component.css
+++ b/front/src/app/pages/home/home.component.css
@@ -27,13 +27,14 @@ img {
   padding: 10px 0;
   font-size: 1.5rem;
   border-width: 2px;
-  border-radius: 3%;
+  border-radius: 8px;
   border-color: black;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 @media (max-width: 768px) {
   img {
-    width: 70%;
+    width: 80%;
   }
   .buttons {
     flex-direction: column;
