--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -4,47 +4,47 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  // This pushes the entire centered block up by 10% of the viewport height
   margin-bottom: 10vh;
-  box-sizing: border-box; // Ensures padding doesn't add to the height
+  box-sizing: border-box; 
 }
 
 img {
-  transition: width 0.2s ease-in-out; // Adds a smooth resize effect
+  transition: width 0.2s ease-in-out; 
 }
 
 .buttons {
   display: flex;
-  gap: 10vw; 
-  margin-top: 5vh; 
+  gap: 10vw;
+  margin-top: 5vh;
   width: 100%;
   justify-content: center;
-  padding: 0 20px; 
+  padding: 0 20px;
   box-sizing: border-box;
 }
 
 .buttons button {
-  width: 300px; 
-  padding: 10px 0; 
-  font-size: 1.5rem; 
-  border-width: 2px; 
-  border-radius: 3%;
+  width: 300px;
+  padding: 10px 0;
+  font-size: 1.5rem;
+  border-width: 2px;
+  border-radius: 8px;
   border-color: black;
+  background-color: #ffffff00;
 }
 
 @media (max-width: 768px) {
   img {
-    width: 70%; // Reduces the logo's width on smaller screens
+    width: 80%;
   }
-  
+
   .buttons {
-    flex-direction: column; 
-    align-items: center; 
-    gap: 50px; 
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
   }
 
   .buttons button {
-    width: 80%; 
+    width: 80%;
     max-width: 300px;
   }
 }
