--- a/front/src/app/pages/auth/register/register.component.scss
+++ b/front/src/app/pages/auth/register/register.component.scss
@@ -30,6 +30,13 @@
   min-height: calc(100vh - 111px);
 }
 
+.error-message {
+  color: #d32f2f;
+  font-size: 14px;
+  margin-top: 4px;
+  align-self: flex-start; 
+}
+
 .back-button {
   position: absolute;
   top: 2rem;
