✅Features: Themes subscription and display complete

--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
 <div class="side-menu" [class.open]="isMenuOpen">
   <div class="side-menu-content">
     <div class="top-links">
-      <button class="logout-button" (click)="toggleMenu()">
+      <button class="logout-button" (click)="logout()">
         Logout
       </button>
       <a
