✅Features: Article details display complete

--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
   <nav class="main-nav">
     <button class="logout-button" (click)="logout()">Logout</button>
     <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
-    <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
+    <a routerLink="/themes" routerLinkActive="active-link">Themes</a>
     <a class="profile-link" routerLink="/me" routerLinkActive="active-link">
       <mat-icon>account_circle</mat-icon>
     </a>
